<resources>
    <string name="app_name">mobilalk</string>
    <string name="login">Bejelentkezés</string>
    <string name="name">Név</string>
    <string name="password">Jelszó</string>
    <string name="username">Felhasználónév</string>
    <string name="register">Regisztráció</string>
    <string name="email">E-mail cím\n</string>
    <string name="phoneNumber">Telefonszám</string>
    <string name="birthdate">Születési dátum:</string>
    <string name="continueAsGuest">Folytatás bejelentkezés nélkül</string>
    <string name="loginWithGoogle">Bejelentkezés Google fiókkal</string>
    <string name="repassword">Jelszó újra</string>
    <string name="item_placeholder">Item\n</string>
    <string name="item_info_placeholder">placeholder info\n</string>
    <string name="addToCart">Kosárba</string>
    <string name="logout">Kijelentkezés</string>
    <string name="search">Search</string>
    <string name="cart">cart</string>
    <string name="title_activity_shopping_item">ShoppingItemActivity</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="open_map">Térkép megnyitása</string>
    <string name="view_more">Mutass többet</string>
    <string name="remove">-</string>
    <string name="add">+</string>
    <string name="pay">Fizetés</string>
    <string name="thank_you">Köszönjük a vásárlást!</string>
    <string name="sortByNumber">Növekvő szerint sorrend</string>
    <string name="abc">ABC szerint sorrend</string>
    <string name="my_map_api_key">AIzaSyCyNRVfO877nZWjfbj8uHYftbUVS8ePnkQ</string>
</resources>