<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_bar"
        android:title="@string/search"
        android:icon="@drawable/search"
        app:showAsAction="always"
        android:visible="true"
        app:actionViewClass="android.widget.SearchView"
        />

    <item
        android:id="@+id/cart"
        android:title="@string/addToCart"
        app:showAsAction="always"
        android:icon="@drawable/shopping_cart"
        android:actionLayout="@layout/custom_menu_item"
        />

    <item
        android:id="@+id/greaterThan"
        android:icon="@drawable/sort_by_numbers"
        app:actionViewClass="android.widget.SearchView"
        android:title="@string/sortByCount"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/sortByAlphabet"
        android:icon="@drawable/sort_by_alpha"
        app:actionViewClass="android.widget.SearchView"
        android:title="@string/abc"
        app:showAsAction="ifRoom"
        android:visible="false"
        />

    <item
        android:id="@+id/log_out"
        android:title="@string/logout"
        app:showAsAction="never"
        android:icon="@drawable/logout"
        app:actionViewClass="android.widget.SearchView"
        />

</menu>