<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/itemTitle"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemImage"
            android:padding="8dp"
            android:text="@string/item_placeholder"
            android:textStyle="bold"
            android:textSize="19sp"/>

        <TextView
            android:id="@+id/description"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemTitle"
            android:padding="8dp"
            android:text="@string/item_info_placeholder" />

        <TextView
            android:id="@+id/count"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:padding="8dp"
            android:textColor="@color/red"
            android:layout_marginBottom="5dp"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/price"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/count"
            android:layout_marginBottom="12dp"
            android:padding="8dp"
            android:textColor="@color/red"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/add_to_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/price"
            android:text="@string/addToCart"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>