<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="?attr/actionBarSize">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relative"
        android:layout_marginBottom="50dp">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true" />

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemImage"
            android:background="#E6CEF8CD"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/itemTitle"
                style="@style/ItemDetailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/item_placeholder"
                android:textStyle="bold"
                android:textColor="?android:textColorSecondary"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/price"
                style="@style/ItemDetailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="@color/red"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/count"
                style="@style/ItemDetailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/main"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/add_to_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/add" />

            <Button
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/remove" />
        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>
